# zad1

./: .gitignore  CMakeLists.txt  readme.txt
src/: CMakeLists.txt
src/inc/: allocator.h  baseWatched.h  client.h  log.h  server.h  threadsHandler.h  watcher.h
src/src/: allocator.cpp  client.cpp  main.cpp  server.cpp  threadsHandler.cpp  watcher.cpp
